# german_tutor

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  azure.yaml  main.py  opencode  pyproject.toml  test-local.sh  test_realtime_full.py  test_ws_client.py
.sisyphus/plans/: fix-dropdown-zindex-and-scenario-prompt.md  fix-stale-messages-and-i18n.md
infra/: abbreviations.json  main.bicep  main.json  main.parameters.json
infra/hooks/: postprovision.ps1  postprovision.sh
infra/modules/: container-apps.bicep  cosmosdb.bicep  identity.bicep  monitoring.bicep  openai.bicep  static-web-app.bicep
src/backend/: Dockerfile  pyproject.toml
src/backend/app/: __init__.py  config.py  main.py
src/backend/app/api/routes/: auth.py  conversations.py  health.py  scenarios.py  settings.py  tts.py  users.py
src/backend/app/api/websocket/: realtime.py
src/backend/app/models/: __init__.py  scenario.py  user.py
src/backend/app/services/: auth.py  conversation_logger.py  scenario_service.py  scenarios.py  summary.py  tutor.py  user_db.py
src/frontend/: package-lock.json  package.json  staticwebapp.config.json  tailwind.config.js
src/frontend/public/: config.json
src/frontend/public/locales/de/: common.json  tutor.json
src/frontend/public/locales/en/: common.json  tutor.json
src/frontend/public/locales/zh/: common.json  tutor.json
src/frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
src/frontend/src/data/: scenarios.ts
src/frontend/src/hooks/: useAudioRecorder.ts  useAuth.ts  useWebSocket.ts
src/frontend/src/pages/: Dashboard.tsx  ForgotPassword.tsx  History.tsx  Home.tsx  Login.tsx  OAuthCallback.tsx  Profile.tsx  Register.tsx  ResetPassword.tsx  Tutor.tsx  VerifyEmail.tsx
src/frontend/src/services/: api.ts  scenarioService.ts
src/frontend/src/store/: index.ts  types.ts
(+20 files in other folders)
